@@ -1,22 +1,21 @@
 package org.flickit.flickitassessmentcore.adapter.out.persistence.assessment;
 
 import lombok.RequiredArgsConstructor;
+import org.flickit.flickitassessmentcore.application.port.in.assessment.GetAssessmentListUseCase.AssessmentListItem;
 import org.flickit.flickitassessmentcore.application.port.out.assessment.CreateAssessmentPort;
-import org.flickit.flickitassessmentcore.application.port.out.assessment.LoadAssessmentBySpacePort;
+import org.flickit.flickitassessmentcore.application.port.out.assessment.LoadAssessmentListItemsBySpacePort;
 import org.flickit.flickitassessmentcore.application.port.out.assessment.UpdateAssessmentPort;
-import org.flickit.flickitassessmentcore.domain.Assessment;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class AssessmentPersistenceJpaAdaptor implements
     CreateAssessmentPort,
-    LoadAssessmentBySpacePort,
+    LoadAssessmentListItemsBySpacePort,
     UpdateAssessmentPort {
 
     private final AssessmentJpaRepository repository;
@@ -29,10 +28,10 @@ public class AssessmentPersistenceJpaAdaptor implements
     }
 
     @Override
-    public List<Assessment> loadAssessmentBySpaceId(Long spaceId, int page, int size) {
+    public List<AssessmentListItem> loadAssessmentListItemBySpaceId(Long spaceId, int page, int size) {
         return repository.findBySpaceIdOrderByLastModificationTimeDesc(spaceId, PageRequest.of(page, size)).stream()
-            .map(AssessmentMapper::mapToDomainModel)
-            .collect(Collectors.toList());
+            .map(AssessmentMapper::mapToAssessmentListItem)
+            .toList();
     }
 
     @Override
